# osk

./: .gitignore  CLAUDE.md  CMakeLists.txt  FEATURES.txt  README.md  osk.desktop  resources.qrc
protocols/: virtual-keyboard-unstable-v1.xml
src/: keyboardcontroller.cpp  keyboardcontroller.h  main.cpp  virtualkeyboard.cpp  virtualkeyboard.h
src/qml/: ClipboardPage.qml  KeyButton.qml  KeyboardLayout.qml  LettersPage.qml  NumpadPage.qml  SettingsPage.qml  ShortcutsPage.qml  Theme.qml  main.qml
